--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>亲亲里·映记</title>
   </head>
-  <body>
+  <body class="default-theme">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
