--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/picture/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>亲亲里·映记</title>
+    <meta name="viewport" content="unsetWidth=device-unsetWidth, initial-scale=1.0" />
+    <title>映记·知识百宝箱</title>
   </head>
   <body class="default-theme">
     <div id="root"></div>
